// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration Tests > should display query strings in the Query column for duplicate routes 1`] = `
"

Filtered requests:

Name   │ Method │ Path             │ Query         │ Status
───────┼────────┼──────────────────┼───────────────┼───────
search │ GET    │ /complete/search │ ?q=javascript │ skip  
search │ GET    │ /complete/search │ ?q=python     │ write 
bgasy  │ GET    │ /async/bgasy     │ ?id=123       │ write 
id     │ GET    │ /pagead/id       │               │ write 
"
`;

exports[`Integration Tests > should filter by url including query string 1`] = `
"

Filtered requests:

Name   │ Method │ Path             │ Query         │ Status
───────┼────────┼──────────────────┼───────────────┼───────
search │ GET    │ /complete/search │ ?q=javascript │ write 
"
`;

exports[`Integration Tests > should filter by url with path and query string 1`] = `
"

Filtered requests:

Name   │ Method │ Path             │ Query     │ Status
───────┼────────┼──────────────────┼───────────┼───────
search │ GET    │ /complete/search │ ?q=python │ write 
"
`;

exports[`Integration Tests > should render result table with folder tree without writing files 1`] = `
"

Filtered requests:

Name          │ Method │ Path                        │ Query │ Status
──────────────┼────────┼─────────────────────────────┼───────┼───────
userRoles     │ GET    │ /api/service/userRoles      │       │ write 
currentUserId │ GET    │ /api/service/currentUserId  │       │ write 
active        │ GET    │ /api/service/clients/active │       │ write 

Folder tree which will be applied:

.
└─┬ mocks
  └─┬ api
    └─┬ service
      ├─┬ userRoles
      │ └── GET.json
      ├─┬ currentUserId
      │ └── GET.json
      └─┬ clients
        └─┬ active
          └── GET.json


No files were written. If you want to write files remove the (--dry-run) flag.
"
`;

exports[`Integration Tests > should render with GET and POST requests 1`] = `
"

Filtered requests:

Name          │ Method │ Path                        │ Query │ Status
──────────────┼────────┼─────────────────────────────┼───────┼───────
userRoles     │ GET    │ /api/service/userRoles      │       │ write 
currentUserId │ GET    │ /api/service/currentUserId  │       │ write 
active        │ GET    │ /api/service/clients/active │       │ write 
send          │ POST   │ /api/service/send           │       │ write 

Folder tree which will be applied:

.
└─┬ mocks
  └─┬ api
    └─┬ service
      ├─┬ userRoles
      │ └── GET.json
      ├─┬ currentUserId
      │ └── GET.json
      ├─┬ clients
      │ └─┬ active
      │   └── GET.json
      └─┬ send
        └── POST.json


✓ Successfully wrote 4 file(s)
"
`;

exports[`Integration Tests > should write files to fs 1`] = `
"

Filtered requests:

Name          │ Method │ Path                        │ Query │ Status
──────────────┼────────┼─────────────────────────────┼───────┼───────
userRoles     │ GET    │ /api/service/userRoles      │       │ write 
currentUserId │ GET    │ /api/service/currentUserId  │       │ write 
active        │ GET    │ /api/service/clients/active │       │ write 

Folder tree which will be applied:

.
└─┬ mocks
  └─┬ api
    └─┬ service
      ├─┬ userRoles
      │ └── GET.json
      ├─┬ currentUserId
      │ └── GET.json
      └─┬ clients
        └─┬ active
          └── GET.json


✓ Successfully wrote 3 file(s)
"
`;

exports[`Integration Tests > with url flag should filter requests based on url with case sensitive 1`] = `
"

Filtered requests:

Name      │ Method │ Path                   │ Query │ Status
──────────┼────────┼────────────────────────┼───────┼───────
userRoles │ GET    │ /api/service/userRoles │       │ write 
"
`;

exports[`Integration Tests > without any flag show all requests in .har 1`] = `
"

Filtered requests:

Name          │ Method │ Path                        │ Query │ Status
──────────────┼────────┼─────────────────────────────┼───────┼───────
userRoles     │ GET    │ /api/service/userRoles      │       │ write 
currentUserId │ GET    │ /api/service/currentUserId  │       │ write 
active        │ GET    │ /api/service/clients/active │       │ write 
"
`;
